feat: implement expogo  and profilescreen

--- a/VirtualLabApp/.gitignore
+++ b/VirtualLabApp/.gitignore
@@ -9,6 +9,7 @@ dist/
 web-build/
 expo-env.d.ts
 
+
 # Native
 .kotlin/
 *.orig.*
@@ -32,6 +33,7 @@ yarn-error.*
 
 # local env files
 .env*.local
+.env
 
 # typescript
 *.tsbuildinfo
@@ -40,4 +42,5 @@ app-example
 
 # generated native folders
 /ios
+Spesifikasi UAS PAWM.pdf
 /android
