fix mobile app and feat splash screen

--- a/VirtualLabApp/app.json
+++ b/VirtualLabApp/app.json
@@ -1,10 +1,10 @@
 {
   "expo": {
-    "name": "VirtualLabApp",
+    "name": "Savetya Dyasara",
     "slug": "VirtualLabApp",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/logo.png",
     "scheme": "virtuallabapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
