--- a/VirtualLabApp/eas.json
+++ b/VirtualLabApp/eas.json
@@ -17,9 +17,7 @@
       "android": {
         "buildType": "apk"
       },
-      "ios": {
-        "buildType": "release"
-      }
+      "ios": {}
     }
   },
   "submit": {
